--- a/docs/gnn/1b-RolloutGNN.ipynb
+++ b/docs/gnn/1b-RolloutGNN.ipynb
@@ -16,19 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 1,
    "id": "fdefeac1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "id": "1451bcb6",
    "metadata": {
     "scrolled": true
@@ -44,69 +35,34 @@
    "outputs": [],
    "source": [
     "from itertools import combinations\n",
-    "\n",
+    "import os\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pickle\n",
     "import torch\n",
     "import torch.nn.functional as functional\n",
-    "from torch_geometric.data import Batch, Data, DataLoader"
+    "from torch_geometric.data import Batch, Data, DataLoader\n",
+    "\n",
+    "from collab_env.data.file_utils import expand_path, get_project_root\n",
+    "from collab_env.data.boids.animal_simulation import visualize_graph, visualize_pair\n",
+    "from collab_env.gnn.gnn import (get_adjcency_from_debug, plot_log_loss, train_rules_gnn,\n",
+    "    identify_frames, find_frame_sets, load_model, debug_result2prediction)\n",
+    "from collab_env.gnn.utility import handle_discrete_data\n",
+    "from collab_env.gnn.gnn_definition import GNN, Lazy\n",
+    "from collab_env.data.boids.animal_simulation import visualize_graph_2sets\n",
+    "from collab_env.gnn.plot_helpers import (rollout_to_pos_vel_acc,\n",
+    "    data_to_pos_vel_acc,\n",
+    "    return_deltapos_vnext,\n",
+    "    figure_data_C)\n",
+    "from collab_env.gnn.plotting_utility import load_various_data\n",
+    "from collab_env.gnn.utility import dataset2testloader\n",
+    "from itertools import product\n",
+    "from rich import print"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "4723ea38-5ef1-4cf6-b2bd-2b198933b0b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import sys\n",
-    "\n",
-    "script_path = os.path.realpath(os.path.dirname(__name__))\n",
-    "os.chdir(script_path)\n",
-    "sys.path.append(\"/workspace/collab-environment/\")\n",
-    "sys.path.append(\"/workspace/collab-environment/collab_env/gnn\")\n",
-    "sys.path.append(\"/workspace/collab-environment/collab_env/data/boids\")\n",
-    "sys.path.append(\"/workspace/collab-environment/figures\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "f348e7b1-b121-4bfe-a5a6-1f73ad2a07eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collab_env.data.file_utils import expand_path, get_project_root\n",
-    "from collab_env.data.boids.animal_simulation import visualize_graph, visualize_pair\n",
-    "from collab_env.gnn.gnn import (get_adjcency_from_debug, plot_log_loss, train_rules_gnn,\n",
-    "    identify_frames, find_frame_sets, load_model, debug_result2prediction)\n",
-    "from utility import handle_discrete_data\n",
-    "from collab_env.gnn.gnn_definition import GNN, Lazy\n",
-    "from collab_env.data.boids.animal_simulation import visualize_graph_2sets\n",
-    "from figures.gnn.plot_helpers import (rollout_to_pos_vel_acc,\n",
-    "    data_to_pos_vel_acc,\n",
-    "    return_deltapos_vnext,\n",
-    "    figure_data_C)\n",
-    "\n",
-    "from collab_env.gnn.utility import dataset2testloader\n",
-    "from itertools import product"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "id": "5294828d-4a11-4371-84b3-83e27e6bc381",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collab_env.gnn.plotting_utility import load_various_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "4cad07db",
    "metadata": {},
    "outputs": [],
@@ -129,32 +85,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "id": "37d95602-72e7-4d20-9552-cb2a82745fb3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_name = \"boid_single_species_basic\"\n",
+    "data_name = \"boid_food_basic\"\n",
     "file_name = f'{data_name}.pt'\n",
     "config_name = f'{data_name}_config.pt'\n",
     "\n",
     "dataset = torch.load(expand_path(\n",
-    "                \"simulated_data/runpod/\" + file_name, get_project_root()), weights_only = False)"
+    "                \"simulated_data/\" + file_name, get_project_root()), weights_only = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 5,
    "id": "578aa521-d3ee-4d07-964b-ddfd0bfbc69d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "500"
+       "300"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,18 +140,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "254632bd-e601-406d-ba85-6b6695c46063",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "data_names = ['boid_single_species_basic']#, 'boid_single_species_independent', # without food\n",
+    "\n",
+    "data_names = ['boid_food_basic']#, 'boid_single_species_independent', # without food\n",
     "              #'boid_food_basic_alignment', 'boid_food_basic_independent', # with food\n",
     "              #'boid_food_strong'] # with food, strong influence\n",
     "\n",
-    "data = load_various_data(data_names, batch_size)"
+    "data = load_various_data(data_names, batch_size=50)\n",
+    "model_root_path = \"trained_models/food/trained_models\""
    ]
   },
   {
@@ -208,17 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "73d058d1-c6c8-4ac0-a873-0790e0c32b02",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loaded model spec.\n",
-      "Loaded training spec.\n",
-      "Loaded model.\n"
+      "\u001b[32m2025-08-25 13:52:17.034\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mload_model\u001b[0m:\u001b[36m931\u001b[0m - \u001b[34m\u001b[1mLoaded model spec.\u001b[0m\n",
+      "\u001b[32m2025-08-25 13:52:17.034\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mload_model\u001b[0m:\u001b[36m936\u001b[0m - \u001b[34m\u001b[1mLoaded training spec.\u001b[0m\n",
+      "\u001b[32m2025-08-25 13:52:17.039\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mload_model\u001b[0m:\u001b[36m957\u001b[0m - \u001b[34m\u001b[1mLoaded model.\u001b[0m\n"
      ]
     }
    ],
@@ -226,7 +184,7 @@
     "model_names = [\"vpluspplus_a\"]\n",
     "noise_levels = [0]\n",
     "heads = [1]\n",
-    "visual_ranges = [0.1]\n",
+    "visual_ranges = [0.5]\n",
     "seed = 0\n",
     "\n",
     "all_combinations = list(product(data_names, model_names, noise_levels, heads, visual_ranges))\n",
@@ -237,13 +195,13 @@
     "for (data_name, model_name, noise, head, visual_range) in all_combinations:\n",
     "    \n",
     "    \n",
-    "    save_name_postfix = f\"noise{noise}_head{head}_visual_range{visual_range}\"\n",
-    "    file_name = f\"{data_name}_{model_name}_{save_name_postfix}_seed{seed}\"\n",
+    "    save_name_postfix = f\"n{noise}_h{head}_vr{visual_range}\"\n",
+    "    file_name = f\"{data_name}_{model_name}_{save_name_postfix}_s{seed}\"\n",
     "\n",
     "    models[ind] = {}\n",
     "    models[ind][\"file_name\"] = file_name\n",
     "    models[ind][\"data_name\"] = data_name\n",
-    "    models[ind][\"model\"], models[ind][\"model_spec\"], models[ind][\"train_spec\"] = load_model(model_name, file_name)\n",
+    "    models[ind][\"model\"], models[ind][\"model_spec\"], models[ind][\"train_spec\"] = load_model(model_name, file_name, root_path = model_root_path)\n",
     "\n",
     "    ind += 1\n",
     "    "
@@ -259,17 +217,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "5abec487-3c5b-419d-82b6-5a21bf1667e6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data keys: dict_keys(['boid_single_species_basic'])\n",
-      "models keys: dict_keys([0])\n"
-     ]
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">data keys: <span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">dict_keys</span><span style=\"font-weight: bold\">([</span><span style=\"color: #008000; text-decoration-color: #008000\">'boid_food_basic'</span><span style=\"font-weight: bold\">])</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "data keys: \u001b[1;35mdict_keys\u001b[0m\u001b[1m(\u001b[0m\u001b[1m[\u001b[0m\u001b[32m'boid_food_basic'\u001b[0m\u001b[1m]\u001b[0m\u001b[1m)\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">models keys: <span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">dict_keys</span><span style=\"font-weight: bold\">([</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0</span><span style=\"font-weight: bold\">])</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "models keys: \u001b[1;35mdict_keys\u001b[0m\u001b[1m(\u001b[0m\u001b[1m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1m]\u001b[0m\u001b[1m)\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -279,30 +255,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "7d5317f6-22c5-4f41-9287-ce17d2a70d8b",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "rolling out...\n",
-      "epoch 0\n",
-      "\n",
-      "\n",
-      "batch 0\n",
-      "\n",
-      "\n",
-      "batch 1\n",
-      "\n",
-      "\n",
-      "batch 2\n",
-      "\n",
-      "\n",
-      "Epoch 000 | Train: 0.1114\n"
+      "\u001b[32m2025-08-25 14:12:25.373\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m594\u001b[0m - \u001b[34m\u001b[1mrolling out...\u001b[0m\n",
+      "\u001b[32m2025-08-25 14:12:25.373\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m600\u001b[0m - \u001b[34m\u001b[1mStarting epoch 1/1\u001b[0m\n",
+      "\u001b[32m2025-08-25 14:12:25.378\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 1/1 | Processing batch 1/6\u001b[0m\n",
+      "\u001b[32m2025-08-25 14:12:33.901\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 1/1 | Processing batch 2/6\u001b[0m\n",
+      "\u001b[32m2025-08-25 14:12:42.228\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 1/1 | Processing batch 3/6\u001b[0m\n",
+      "\u001b[32m2025-08-25 14:12:51.432\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 1/1 | Processing batch 4/6\u001b[0m\n",
+      "\u001b[32m2025-08-25 14:13:00.239\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 1/1 | Processing batch 5/6\u001b[0m\n",
+      "\u001b[32m2025-08-25 14:13:08.838\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m608\u001b[0m - \u001b[34m\u001b[1mEpoch 1/1 | Processing batch 6/6\u001b[0m\n",
+      "\u001b[32m2025-08-25 14:13:18.158\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36mcollab_env.gnn.gnn\u001b[0m:\u001b[36mtrain_rules_gnn\u001b[0m:\u001b[36m632\u001b[0m - \u001b[34m\u001b[1mEpoch 000 | Train loss: 22.42\u001b[0m\n"
      ]
     }
    ],
@@ -337,7 +308,7 @@
     "    )\n",
     "\n",
     "    rollout_path = expand_path(\n",
-    "            f\"trained_models/{file_name}_rollout_{rollout_starting_frame}.pkl\",\n",
+    "            f\"{model_root_path}/rollouts/{file_name}_rollout_{rollout_starting_frame}.pkl\",\n",
     "            get_project_root()\n",
     "    )\n",
     "\n",
@@ -356,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 21,
    "id": "7ea3d7fd-0ca9-4656-abb7-f097ecf89fcf",
    "metadata": {},
    "outputs": [],
@@ -368,10 +339,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 22,
    "id": "a5fb7a1d-36d7-4fb8-92b8-ce8ec83ee9e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[22], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m pos, vel, acc, pos_gnn, vel_gnn, acc_gnn, frame_sets \u001b[38;5;241m=\u001b[39m \u001b[43mdebug_result2prediction\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrollout_debug_result\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[43m                                                                               \u001b[49m\u001b[43mfile_id\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mfile_id\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/git/collab-environment/collab_env/gnn/gnn.py:997\u001b[0m, in \u001b[0;36mdebug_result2prediction\u001b[0;34m(rollout_debug_result, file_id, epoch_num)\u001b[0m\n\u001b[1;32m    994\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mdebug_result2prediction\u001b[39m(rollout_debug_result, file_id, epoch_num \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m):\n\u001b[1;32m    995\u001b[0m \n\u001b[1;32m    996\u001b[0m     \u001b[38;5;66;03m# infer batch size\u001b[39;00m\n\u001b[0;32m--> 997\u001b[0m     predicted \u001b[38;5;241m=\u001b[39m \u001b[43mrollout_debug_result\u001b[49m\u001b[43m[\u001b[49m\u001b[43mepoch_num\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mpredicted\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[1;32m    998\u001b[0m     batch_size \u001b[38;5;241m=\u001b[39m predicted\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m   1000\u001b[0m     \u001b[38;5;66;03m# infer batch number and the index within that batch\u001b[39;00m\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "pos, vel, acc, pos_gnn, vel_gnn, acc_gnn, frame_sets = debug_result2prediction(rollout_debug_result,\n",
     "                                                                               file_id = file_id)"
@@ -1153,7 +1137,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv-310",
    "language": "python",
    "name": "python3"
   },
@@ -1167,7 +1151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
