--- a/figures/gnn/A. rollout_figure.ipynb
+++ b/figures/gnn/A. rollout_figure.ipynb
@@ -22,23 +22,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3127844b-c126-4400-bd18-26116a6b4af9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "import sys\n",
-    "\n",
-    "script_path = os.path.realpath(os.path.dirname(__name__))\n",
-    "os.chdir(script_path)\n",
-    "sys.path.append(\"/workspace/collab-environment/\")\n",
-    "sys.path.append(\"/workspace/collab-environment/collab_env/gnn\")\n",
-    "sys.path.append(\"/workspace/collab-environment/collab_env/data/boids\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "b45290d1-46e2-4d39-86c3-3240d8723c79",
    "metadata": {},
    "outputs": [],
@@ -59,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "0f41a1bb-086c-42e9-a914-392c67a1949c",
    "metadata": {},
    "outputs": [],
@@ -70,7 +53,8 @@
     "\n",
     "from collab_env.gnn.utility import dataset2testloader\n",
     "from collab_env.gnn.plotting_utility import load_various_data, load_rollout\n",
-    "from itertools import product"
+    "from itertools import product\n",
+    "from rich import print"
    ]
   },
   {
@@ -83,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "2c646d4d-e345-4d6a-8b67-7cc9eda557d0",
    "metadata": {},
    "outputs": [],
@@ -93,14 +77,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
+   "id": "6decead4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">{</span>\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'A'</span>: <span style=\"font-weight: bold\">{</span>\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'visual_range'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">60</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'centering_factor'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.005</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'min_distance'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">15</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'avoid_factor'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.05</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'matching_factor'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.5</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'margin'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">20</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'turn_factor'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">4</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'speed_limit'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">7</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'food_factor'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0.05</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'food_visual_range'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">200</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'food_eating_range'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">20</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'food_time'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">300</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'hunger_threshold'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">-100</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'counts'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">20</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'width'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">480</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'height'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">480</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'independent'</span>: <span style=\"color: #ff0000; text-decoration-color: #ff0000; font-style: italic\">False</span>,\n",
+       "        <span style=\"color: #008000; text-decoration-color: #008000\">'food'</span>: <span style=\"font-weight: bold\">{</span><span style=\"color: #008000; text-decoration-color: #008000\">'x'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">160.0</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'y'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'counts'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span><span style=\"font-weight: bold\">}</span>\n",
+       "    <span style=\"font-weight: bold\">}</span>,\n",
+       "    <span style=\"color: #008000; text-decoration-color: #008000\">'food0'</span>: <span style=\"font-weight: bold\">{</span><span style=\"color: #008000; text-decoration-color: #008000\">'x'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">160.0</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'y'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0</span>, <span style=\"color: #008000; text-decoration-color: #008000\">'counts'</span>: <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">1</span><span style=\"font-weight: bold\">}</span>\n",
+       "<span style=\"font-weight: bold\">}</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[1m{\u001b[0m\n",
+       "    \u001b[32m'A'\u001b[0m: \u001b[1m{\u001b[0m\n",
+       "        \u001b[32m'visual_range'\u001b[0m: \u001b[1;36m60\u001b[0m,\n",
+       "        \u001b[32m'centering_factor'\u001b[0m: \u001b[1;36m0.005\u001b[0m,\n",
+       "        \u001b[32m'min_distance'\u001b[0m: \u001b[1;36m15\u001b[0m,\n",
+       "        \u001b[32m'avoid_factor'\u001b[0m: \u001b[1;36m0.05\u001b[0m,\n",
+       "        \u001b[32m'matching_factor'\u001b[0m: \u001b[1;36m0.5\u001b[0m,\n",
+       "        \u001b[32m'margin'\u001b[0m: \u001b[1;36m20\u001b[0m,\n",
+       "        \u001b[32m'turn_factor'\u001b[0m: \u001b[1;36m4\u001b[0m,\n",
+       "        \u001b[32m'speed_limit'\u001b[0m: \u001b[1;36m7\u001b[0m,\n",
+       "        \u001b[32m'food_factor'\u001b[0m: \u001b[1;36m0.05\u001b[0m,\n",
+       "        \u001b[32m'food_visual_range'\u001b[0m: \u001b[1;36m200\u001b[0m,\n",
+       "        \u001b[32m'food_eating_range'\u001b[0m: \u001b[1;36m20\u001b[0m,\n",
+       "        \u001b[32m'food_time'\u001b[0m: \u001b[1;36m300\u001b[0m,\n",
+       "        \u001b[32m'hunger_threshold'\u001b[0m: \u001b[1;36m-100\u001b[0m,\n",
+       "        \u001b[32m'counts'\u001b[0m: \u001b[1;36m20\u001b[0m,\n",
+       "        \u001b[32m'width'\u001b[0m: \u001b[1;36m480\u001b[0m,\n",
+       "        \u001b[32m'height'\u001b[0m: \u001b[1;36m480\u001b[0m,\n",
+       "        \u001b[32m'independent'\u001b[0m: \u001b[3;91mFalse\u001b[0m,\n",
+       "        \u001b[32m'food'\u001b[0m: \u001b[1m{\u001b[0m\u001b[32m'x'\u001b[0m: \u001b[1;36m160.0\u001b[0m, \u001b[32m'y'\u001b[0m: \u001b[1;36m0\u001b[0m, \u001b[32m'counts'\u001b[0m: \u001b[1;36m1\u001b[0m\u001b[1m}\u001b[0m\n",
+       "    \u001b[1m}\u001b[0m,\n",
+       "    \u001b[32m'food0'\u001b[0m: \u001b[1m{\u001b[0m\u001b[32m'x'\u001b[0m: \u001b[1;36m160.0\u001b[0m, \u001b[32m'y'\u001b[0m: \u001b[1;36m0\u001b[0m, \u001b[32m'counts'\u001b[0m: \u001b[1;36m1\u001b[0m\u001b[1m}\u001b[0m\n",
+       "\u001b[1m}\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "with open(expand_path(\"./simulated_data/boid_food_basic_config.pt\", get_project_root()), \"rb\") as f:\n",
+    "    config = torch.load(f)\n",
+    "\n",
+    "print(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f8e0ca26-88e1-457e-af53-1a2355558c0e",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "data_names = ['/runpod_old/boid_single_species_basic']#, 'boid_single_species_independent', # without food\n",
+    "data_names = ['boid_food_basic']#, 'boid_single_species_independent', # without food\n",
     "              #'boid_food_basic_alignment', 'boid_food_basic_independent', # with food\n",
     "              #'boid_food_strong'] # with food, strong influence\n",
     "\n",
@@ -113,7 +168,11 @@
     "    \"noise\": 0\n",
     "}   \n",
     "\n",
-    "rollout_result = load_rollout(\"vpluspplus_a\", **spec)"
+    "rollout_result = load_rollout(\n",
+    "    \"vpluspplus_a\",\n",
+    "    root_path = expand_path(\"./trained_models/food/trained_models\", get_project_root()),\n",
+    "    **spec\n",
+    ")"
    ]
   },
   {
@@ -174,7 +233,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv-310",
    "language": "python",
    "name": "python3"
   },
@@ -188,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
