--- a/figures/gnn/A. rollout_figure.ipynb
+++ b/figures/gnn/A. rollout_figure.ipynb
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0f41a1bb-086c-42e9-a914-392c67a1949c",
    "metadata": {},
    "outputs": [],
    "source": [
     "from collab_env.gnn.gnn import get_adjcency_from_debug, plot_log_loss, train_rules_gnn, load_model, save_model, debug_result2prediction\n",
     "from collab_env.gnn.gnn_definition import GNN, Lazy\n",
-    "from collab_env.data.boids.animal_simulation import visualize_graph_2sets, static_visualize_2sets\n",
+    "from collab_env.sim.boids_gnn_temp.animal_simulation_from_data_old import visualize_graph_2sets, static_visualize_2sets\n",
     "\n",
     "from collab_env.gnn.utility import dataset2testloader\n",
     "from collab_env.gnn.plotting_utility import load_various_data, load_rollout\n",
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "f8e0ca26-88e1-457e-af53-1a2355558c0e",
    "metadata": {
     "scrolled": true
@@ -170,14 +170,14 @@
     "\n",
     "rollout_result = load_rollout(\n",
     "    \"vpluspplus_a\",\n",
-    "    root_path = expand_path(\"./trained_models/\", get_project_root()),\n",
+    "    root_path = expand_path(\"./trained_models/boid_food_basic/rollouts\", get_project_root()),\n",
     "    **spec\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "id": "33f29291-5dd6-4067-9038-e9e306764079",
    "metadata": {},
    "outputs": [
