--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -71,24 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "85cb2529",
    "metadata": {},
    "outputs": [],
    "source": [
     "skip_download = False\n",
-    "skip_thermal_extraction = True\n",
+    "skip_thermal_extraction = False\n",
     "smoke_test = \"CI\" in os.environ  # True if running in CI environment"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "6652dff6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "smoke_test = True"
    ]
   },
   {
@@ -101,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "888d4395",
    "metadata": {},
    "outputs": [
@@ -115,18 +105,21 @@
     }
    ],
    "source": [
-    "# Setup Configuration\n",
-    "load_dotenv()\n",
-    "data_key = expand_path(os.environ.get(\"COLLAB_DATA_KEY\", \"\"), get_project_root())\n",
-    "PROJECT_ID = \"collab-data-463313\"\n",
-    "\n",
-    "CREDENTIALS_PATH = expand_path(data_key.as_posix(), get_project_root())\n",
-    "\n",
     "# Connect to Google Cloud Storage\n",
-    "gcs_client = GCSClient(\n",
-    "    project_id=PROJECT_ID,\n",
-    "    credentials_path=CREDENTIALS_PATH,\n",
-    ")"
+    "if smoke_test:\n",
+    "    gcs_client = GCSClient()\n",
+    "else:\n",
+    "    # Setup Configuration\n",
+    "    load_dotenv()\n",
+    "    data_key = expand_path(os.environ.get(\"COLLAB_DATA_KEY\", \"\"), get_project_root())\n",
+    "    PROJECT_ID = \"collab-data-463313\"\n",
+    "\n",
+    "    CREDENTIALS_PATH = expand_path(data_key.as_posix(), get_project_root())\n",
+    "\n",
+    "    gcs_client = GCSClient(\n",
+    "        project_id=PROJECT_ID,\n",
+    "        credentials_path=CREDENTIALS_PATH,\n",
+    "    )"
    ]
   },
   {
