--- a/docs/alignment/align.ipynb
+++ b/docs/alignment/align.ipynb
@@ -580,7 +580,7 @@
     "    view_image=view_image,\n",
     "    frame=frame,\n",
     "    result=result,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -649,7 +649,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "collab-env",
+   "display_name": ".venv-310",
    "language": "python",
    "name": "python3"
   },
@@ -663,7 +663,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
