--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -37,6 +37,7 @@
     "\n",
     "# Import Environment Variables\n",
     "from dotenv import load_dotenv\n",
+    "from loguru import logger\n",
     "\n",
     "# Import Utility Functions\n",
     "from collab_env.data.file_utils import expand_path, get_project_root\n",
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "85cb2529",
    "metadata": {},
    "outputs": [],
@@ -92,34 +93,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "888d4395",
+   "id": "14c4d884",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2025-09-03 22:14:54.147\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcollab_env.data.gcs_utils\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m36\u001b[0m - \u001b[1mUsing credentials from /Users/dima/git/collab-environment/config-local/collab-data-463313-c340ad86b28e.json\u001b[0m\n",
-      "\u001b[32m2025-09-03 22:14:54.148\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcollab_env.data.gcs_utils\u001b[0m:\u001b[36m__init__\u001b[0m:\u001b[36m42\u001b[0m - \u001b[1mUsing project collab-data-463313\u001b[0m\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Connect to Google Cloud Storage\n",
-    "if smoke_test:\n",
+    "try:\n",
     "    gcs_client = GCSClient()\n",
-    "else:\n",
-    "    # Setup Configuration\n",
-    "    load_dotenv()\n",
-    "    data_key = expand_path(os.environ.get(\"COLLAB_DATA_KEY\", \"\"), get_project_root())\n",
-    "    PROJECT_ID = \"collab-data-463313\"\n",
-    "\n",
-    "    CREDENTIALS_PATH = expand_path(data_key.as_posix(), get_project_root())\n",
-    "\n",
-    "    gcs_client = GCSClient(\n",
-    "        project_id=PROJECT_ID,\n",
-    "        credentials_path=CREDENTIALS_PATH,\n",
-    "    )"
+    "except Exception as e:\n",
+    "    logger.error(f\"Error initializing GCSClient: {e}\")\n",
+    "    gcs_client = None"
    ]
   },
   {
