--- a/docs/tracking/full_pipeline.ipynb
+++ b/docs/tracking/full_pipeline.ipynb
@@ -35,10 +35,6 @@
     "\n",
     "import numpy as np\n",
     "\n",
-    "# Import Environment Variables\n",
-    "from dotenv import load_dotenv\n",
-    "from loguru import logger\n",
-    "\n",
     "# Import Utility Functions\n",
     "from collab_env.data.file_utils import expand_path, get_project_root\n",
     "from collab_env.data.gcs_utils import GCSClient\n",
@@ -59,7 +55,9 @@
     "from collab_env.tracking.visualization import (  # overlay_tracks_on_video, # TODO: this doesn't work\n",
     "    export_tracks_with_masks,\n",
     "    plot_tracks_at_frame_bbox_from_video,\n",
-    ")"
+    ")\n",
+    "\n",
+    "# Import Environment Variables"
    ]
   },
   {
@@ -97,11 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    gcs_client = GCSClient()\n",
-    "except Exception as e:\n",
-    "    logger.error(f\"Error initializing GCSClient: {e}\")\n",
-    "    gcs_client = None"
+    "gcs_client = GCSClient()  # use default connection credentials"
    ]
   },
   {
